<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/user_profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/profile"
            />

        <item
            android:id="@+id/weight_goal"
            android:icon="@drawable/ic_add_weight"
            android:title="@string/set_goal"
            />

    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />

        </menu>
    </item>

</menu>
